# PyRps

./: .gitignore  README.md  setup.cfg  test.py
.github/workflows/: python-publish.yml
Core/: Match.py
src/Core/Types/: Card.py
src/Rps/: Match.py  RpsCore.py
src/Rps/Types/: Card.py  Player.py
