[metadata]
# replace with your username:
name = PyRps
version = 0.0.3
author = immmdreza
author_email = ir310022@gmail.com
description = A gaming package for python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/immmdreza/PyRps
project_urls =
    Bug Tracker = https://github.com/immmdreza/PyRps/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
